--- a/src/index.css
+++ b/src/index.css
@@ -1,78 +1,23 @@
-
-.app-header {
-  display: flex;
-  justify-content: space-between;
-  background-color: var(--gris2);
-  padding: 4rem;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-} 
-html {
-  box-sizing: border-box;
-  height: 100%;
-  
-}
-
 body {
-  min-height: 100%;
-  background-color: var(--gris1);
-  /*font-size: 16px; 
-  font-size: 1.6rem;*/
-  font-family: var(--textFont);
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.container{ 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  padding: 0 auto;
-  margin: 0 auto;
+.content {
+  padding:20px;
+}
+.content_starter {
+  background-color: white;
+  padding: 30px;
+  border-radius: 20px;
 }
 
-.row{
-  width: 100%;
-}
 
-.appheader{
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    display: flex;
-}
-
-.list-group{
-  display: flex;
-  justify-content: center;
-  
-}
-/*
-.contador{
-  align-items: center;
-    justify-content: center;
-    width: 100%;
-    display: flex;
-}*/
-
-.card-header{
-  align-items: center;
-    justify-content: center;
-    width: 100%;
-    display: flex;
-}
-
-.cglobal{
-  align-items: center;
-  justify-content: center;
+.col{
   display: flex;
 }
-
-
-.cglobalspace{
-  width: 50%;
-  justify-content: space-between;
-  display: flex;
-}
-
-
