--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@ body {
 }
 .title{
   width: 100%;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 
 .container{
@@ -23,6 +25,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  margin-bottom: 5%;
 }
 .item{
   align-items: center; 
