--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html {
+  scroll-behavior: smooth;
+  width: 100%;
+}
+
+
 body {
   margin: 0;
   padding: 0;
@@ -6,16 +12,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
 }
+
 .title{
   width: 100%;
   margin-top: 3%;
   margin-bottom: 3%;
 }
 
-.container{
+.container {
   width:100%;
   grid-gap: 10px;
+}
+
+.content{
+  width:100%;
+}
+
+.table{
+  width: 100%;
 }
 
 .row{
@@ -33,7 +49,7 @@ body {
   border-radius: 5px;
   margin: auto;
   min-width: 226px;
-  width: 300px;
+  width: 100%;
 
 }
 
@@ -41,4 +57,105 @@ body {
   align-items: center; 
   justify-content: center;
  
+}
+
+.grid_itemListado{
+  align-items: center; 
+  justify-content: center;
+  width: 100%;
+ /* min-width: 80%;*/
+}
+.itemListado{
+  align-items: center; 
+  /*justify-content: center;*/
+  border-radius: 5px;
+  margin: 0;
+  /*min-width: 226px;*/
+  width:100%;
+   
+
+}
+
+ .paises{
+  align-items: left;
+  margin: 0;
+  padding: 0;
+
+ }
+
+ 
+.columna{
+  font-weight: bold;
+  padding: 0;
+}
+
+.columnaIndex{
+  margin: 0;
+  font-weight: bold;
+}
+.columnaPais{
+  margin: 0;
+  font-weight: bold;
+ 
+}
+
+.columnaAncha{
+  margin: 0;
+  font-weight: bold;
+  padding: 0;
+}
+
+.columnaUltima{
+  margin: 0;
+  font-weight: bold;
+  padding: 0;
+  width: 15%;
+
+}
+
+.linkUru{
+ color: white;
+}
+
+.manito{
+  cursor: pointer;
+}
+
+
+
+.containerTable{
+  width:100%;
+  padding:0;
+  margin:5px;
+}
+
+
+
+
+@media only screen and (max-width: 600px) {
+  #tultimos, #tfallecidos, #fultimos, #ffallecidos{
+    display: none;
+  }
+  .td.col{
+    padding-right: 0;
+  }
+  .table th col, .table td col{
+    padding-right: 0;
+  }
+  .table, table, .table th, .table td, .th,.td, th, td, .tr, tr {
+    padding:0;
+    margin:0;
+    font-size: 0.500rem;
+  
+  }
+
+  .textlg{
+    font-size: 80%;
+  }
+  
+  .textsm{
+    font-size: 70%;
+  
+  }
+
 }
